tests/idris2/error/error035/Issue3550.idr
CharacterExcept : Type
CharacterExcept = `Elem` _ . fst

